# botsv2

./: .env  .gitattributes  README.md  allbuild  alldown  allreboot  allup  build  chmod.bash  chmod.sh  clean  clean.py  controlbuild  controldown  controlreboot  controlup  docker-compose.yml  down  init.sh  log  loop.sh  out.yml  push  reboot  restart  sync  up
bots/: .env  down  sync
bots/discordcr/: run.bash  (+1 more)
clones/: docker-compose.yml  log
containerless/: build  env.py  log  logs.txt  up
control/: bot.py  kill.bash
detriusjs/: detriusjs.ts  run.bash
dimscord/: Dockerfile  dimscordnim  dimscordnim.nim
discord.jl/: Dockerfile  discord.jl.jl  run.bash
discord.js/: Dockerfile  discord.js.js  docker-compose.yml  reboot  up
discord.py/: Dockerfile  discord.py.py  docker-compose.yml  reboot  up
discordcr/: Dockerfile  discordcr.cr
discordgo/: Dockerfile  discordgo.go  docker-compose.yml  reboot  up
discordia/: Dockerfile  discordia.lua  run.bash
discordphp/: discordphp.php
discordrb/: Dockerfile  discordrb.rb  docker-compose.yml  reboot  up
docs/: CNAME  credit.html  credit.json  index.html  jquery.js  json.js  langs.html  langs.md  require.js  style.css  text.js
dummies/: Dockerfile  bot.py
eris/: Dockerfile  docker-compose.yml  eris.js  reboot  up
haxicord/: Dockerfile  Main.hx  build.hxml
placeholders/: Dockerfile  bot.py  imports.py  main.py
rpc1/: Dockerfile  bot.py
rpc2/: Dockerfile  bot.py
rpc3/: Dockerfile  bot.py
rpc4/: Dockerfile  bot.py
serenity/: Cargo.toml  Dockerfile  run.bash  serenity.rs.rs
utilities/: bot.py
(+91 files in other folders)
